@@ -1,4 +1,4 @@
-#!/usr/bin/env bash
+#!/bin/bash
 
 env_vars=($(printenv | grep EDDI_JAVA_ENV_))
 
@@ -19,9 +19,9 @@ if ! [[ -z "${EDDI_MEMORY_MIN}" ]]; then
 fi
 
 if ! [[ -z "${EDDI_MEMORY_MAX}" ]]; then
-    memory_string="${memory_string} -Xmx${EDDI_MEMORY_MAX}"
+    memory_string="${memory_string} -Xmx${EDDI_MEMORY_MAX} -XX:NewSize=${EDDI_MEMORY_MAX}"
 fi
 
 echo "memory params: ${memory_string}"
 
-java -server -XX:+UseG1GC ${memory_string} -Xbootclasspath/p:'.:lib/alpn-boot-8.1.11.v20170118.jar' -classpath '.:lib/*' -DEDDI_ENV=$EDDI_ENV ${argument_string} ai.labs.api.ApiServer
+java -server ${memory_string} -classpath '.:lib/*' -DEDDI_ENV=$EDDI_ENV ${argument_string} --add-opens java.base/java.lang=ALL-UNNAMED ai.labs.api.ApiServer
